@@ -1,6 +1,7 @@
 package pairmatching.model.pair;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import pairmatching.model.crew.Course;
 import pairmatching.model.crew.Level;
@@ -18,7 +19,7 @@ public class PairMatcher {
                 if (history.isMatched(course, level, crew1Name, crew2Name)) {
                     throw new IllegalArgumentException();
                 }
-                pairs.add(Pair.from(List.of(crew1Name, crew2Name)));
+                pairs.add(Pair.from(Arrays.asList(crew1Name, crew2Name)));
             }
         }
 
@@ -28,18 +29,17 @@ public class PairMatcher {
             if (history.isMatched(course, level, crew1Name, crew2Name)) {
                 throw new IllegalArgumentException();
             }
-            pairs.add(Pair.from(List.of(crew1Name, crew2Name)));
+            pairs.add(Pair.from(Arrays.asList(crew1Name, crew2Name)));
         }
 
-        if (crewNames.size() == 3) {
-            String crew1Name = crewNames.remove(0);
-            String crew2Name = crewNames.remove(0);
-            String crew3Name = crewNames.remove(0);
-            if (history.isMatched(course, level, crew1Name, crew2Name) || history.isMatched(course, level, crew1Name, crew3Name) || history.isMatched(course, level, crew2Name, crew3Name)) {
-                throw new IllegalArgumentException();
-            }
-            pairs.add(Pair.from(List.of(crew1Name, crew2Name, crew3Name)));
+        String crew1Name = crewNames.remove(0);
+        String crew2Name = crewNames.remove(0);
+        String crew3Name = crewNames.remove(0);
+        if (history.isMatched(course, level, crew1Name, crew2Name) || history.isMatched(course, level, crew1Name,
+            crew3Name) || history.isMatched(course, level, crew2Name, crew3Name)) {
+            throw new IllegalArgumentException();
         }
+        pairs.add(Pair.from(Arrays.asList(crew1Name, crew2Name, crew3Name)));
         return pairs;
     }
 }
